css/style.css
/* ... */
#close-create.open:hover > #close-create.open:after {
  background-color: rgba(34, 132, 255, 1);
  height: 3px;
}

#close-create.open p {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  padding: 0;
  text-align: center;
  color: #333;
  font-size: 0;
  background: #fff;
  text-shadow: 1px 1px 1px rgba(55, 55, 55, 0.5);
  -webkit-box-shadow: -1px 1px 1px rgba(55, 55, 55, 0.5);
  box-shadow: -1px 1px 1px rgba(55, 55, 55, 0.5);
  border: 0 solid #333;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: all 0.6s ease-in-out;
  transition: all 0.6s ease-in-out;
}

#close-create.open:hover > p {
  left: -3.7rem;
  width: 3.7rem;
  padding: 0.2em;
  border: 1px solid #333;
  font-size: inherit;
}

#close-create.open:before,
#close-create.open:after {
  content: "";
  position: absolute;
  bottom: 50%;
  left: 0;
  width: 2rem;
  height: 1px;
  padding: 0;
  margin: 0;
  background-color: #333;
}

#close-create.open:before {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

#close-create.open:after {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

/******************* CODE PAGE  ******************/

/** Header section **/

header {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
}

header .header-banner {
  width: 100%;
  height: 100vh;
  background-image: url("../img/plx-img1.jpeg");
  background-attachment: fixed;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
}

.under-text {
  position: fixed;
  opacity: 1;
  top: calc(25% + 4rem);
  right: 50%;
  -webkit-transform: translateX(50%);
  transform: translateX(50%);
  z-index: 0;
}

.under-text p {
  width: 50%;
  background: #fff;
  color: #333;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  margin: 0 auto;
  text-align: center;
  padding: 2rem;
}

.under-text span {
  display: block;
  width: 100%;
  background-color: #333;
  color: #fff;
  font-weight: 100;
  text-align: center;
  -webkit-transition: color 0.4s ease-in-out, background-color 0.4s ease-in-out, font-weight 0.4s ease-in-out;
  transition: color 0.4s ease-in-out, background-color 0.4s ease-in-out, font-weight 0.4s ease-in-out;

}

/** Nav section **/

.nav-container {
  position: absolute;
  margin: 0 auto;
  top: 25%;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 50%;
  height: 0;
  text-align: center;
  -webkit-transition: width 0.7s;
  transition: width 0.7s;
  z-index: 1000;
}

.fixed-nav {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  height: 4rem;
  background: #333;
  -webkit-box-shadow: 1px 2px 14px rgba(33, 33, 33, 0.8);
  box-shadow: 1px 2px 14px rgba(33, 33, 33, 0.8);
  z-index: 20;
}

.nav-container .logo {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto;
  color: #0A0;
  height: inherit;
  background: #333;
  opacity: 0;
  z-index: 0;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

.nav-container .logo.nav-top {
  opacity: 1;
}

.nav-container .title {
  position: relative;
  height: 4rem;
  display: table;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  margin: 0 auto;
  color: #fff;
  background: #333;
  z-index: 100;
}

.nav-container:hover ~ .under-text span {
  background-color: #00ccff;
  color: #333;
  font-weight: 200;

}

.nav-container .title h5 {
  display: table-cell;
  vertical-align: middle;
}

.nav-container nav {
  position: relative;
  margin: 0 auto;
  height: inherit;
  opacity: 0;
  z-index: 100;
  background: #333;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

.nav-container nav.nav-top {
  opacity: 1;
}

nav ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  color: #A0A;
  height: inherit;
  margin: 0 auto;
  list-style-type: none;
  text-align: left;
}

nav ul li {
  display: inline;
  line-height: inherit;
  margin-left: 10px;
}

nav ul li a {
  text-decoration: none;
}


/** Section 1**/

section.code-project {
  position: relative;
  display: block;
  background: #fff;
  width: 100%;
  padding: 6rem 2rem;
  z-index: 15;
}

section.code-project .code-subhead {
  position: relative;
  display: inline-block;
  width: 100%;
  text-align: center;
  margin: 0 auto;
  text-transform: uppercase;
  padding: 2rem;
}

section.code-project .code-subhead h2 {
  display: block;
}

section.code-project .code-subhead h2:before,
.code-subhead h2:after {
  content: "";
  display: block;
  position: absolute;
  top: 55%;
  width: calc(35vw - 3em);
  margin: 0 3rem;
  height: 4px;
  background-color: #333;

}

section.code-project .code-subhead h2:before {
  left: 0;
}

section.code-project .code-subhead h2:after {
  right: 0;
}


section.code-project .code-project-twnaf,
.code-project-perizia {
  padding: 0 2rem;
}

section.code-project .project-title {
  margin: 0 auto;
  padding: 0 2rem;
  text-align: center;

}

section.code-project .project-title a {
  text-decoration: none;
  color: inherit;
  border-bottom: 1px solid transparent;
  background: #fff;
  padding: 0.1rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

section.code-project .project-title a:hover {
  border-bottom: 1px solid #4093fb;
  color: #fff;
  background: #000;
}

section.code-project .project-intro {
  width: 100%;
  height: 11rem;
  margin: 0 auto;
  padding: 0.5rem 2rem;
  text-align: justify;
}

section.code-project .project-iframe {
  position: relative;
  height: 0;
  padding-bottom: 56.25%;
  display: block;
  width: 100%;
  overflow: auto;
  margin: 0 auto;

}
/* ... */

